[gd_scene load_steps=6 format=3 uid="uid://cb3xu1m87j2o8"]

[ext_resource type="Theme" uid="uid://bc0o65m108hf6" path="res://Misc/Themes/nord.tres" id="1_xuhwf"]
[ext_resource type="Script" uid="uid://dy4ayf87a55g7" path="res://Scenes/UI/PlayerCustomizationMenu/online_player_selection_menu.gd" id="2_uod4e"]
[ext_resource type="PackedScene" uid="uid://ch7ktmnnktu7d" path="res://Scenes/UI/PlayerCustomizationMenu/ItemsGridMenu/items_grid_menu.tscn" id="2_xuhwf"]
[ext_resource type="PackedScene" uid="uid://tx5an1q2tqo3" path="res://Scenes/UI/PlayerCustomizationMenu/PlayerConfigDisplay/player_config_display.tscn" id="2_ydcmf"]
[ext_resource type="PackedScene" uid="uid://b7s8i5b2dk747" path="res://Scenes/UI/PlayerCustomizationMenu/PresetsMenu/presets.tscn" id="3_d7l6s"]

[node name="OnlinePlayerSelectionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xuhwf")
script = ExtResource("2_uod4e")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuRoot" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="MenuRoot"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="PlayerConfig" parent="MenuRoot/TabContainer" instance=ExtResource("2_ydcmf")]
layout_mode = 2
metadata/_tab_index = 0

[node name="Presets" parent="MenuRoot/TabContainer" instance=ExtResource("3_d7l6s")]
visible = false
layout_mode = 2
CAN_BE_CLOSED = false
metadata/_tab_index = 1

[node name="PrimaryWeapon" parent="MenuRoot/TabContainer" instance=ExtResource("2_xuhwf")]
visible = false
layout_mode = 2
CAN_BE_CLOSED = false
metadata/_tab_index = 2

[node name="MovementBonus" parent="MenuRoot/TabContainer" instance=ExtResource("2_xuhwf")]
visible = false
layout_mode = 2
CAN_BE_CLOSED = false
metadata/_tab_index = 3

[node name="Powerup" parent="MenuRoot/TabContainer" instance=ExtResource("2_xuhwf")]
visible = false
layout_mode = 2
CAN_BE_CLOSED = false
metadata/_tab_index = 4

[node name="ReadyButton" type="Button" parent="MenuRoot"]
layout_mode = 2
text = "Ready !"

[node name="WaitingForOtherPlayersText" type="RichTextLabel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[wave amp=50.0 freq=5.0 connected=1]Waiting for the other players[/wave]"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="preset_selected" from="MenuRoot/TabContainer/Presets" to="." method="_on_presets_preset_selected"]
[connection signal="item_selected" from="MenuRoot/TabContainer/PrimaryWeapon" to="." method="_on_primary_weapon_item_selected"]
[connection signal="item_selected" from="MenuRoot/TabContainer/MovementBonus" to="." method="_on_movement_bonus_item_selected"]
[connection signal="item_selected" from="MenuRoot/TabContainer/Powerup" to="." method="_on_powerup_item_selected"]
[connection signal="pressed" from="MenuRoot/ReadyButton" to="." method="_on_ready_button_pressed"]
